@@ -276,17 +276,20 @@
 	'xh' => 'isiXhosa',		# Xhosan
 	'yi' => 'ייִדיש',	# Yiddish
 	'yo' => 'Yorùbá',	# Yoruba
+	'yue' => '粵語', 	# Cantonese -- (bug 8217) yue instead of zh-yue, http://www.sil.org/iso639-3/codes.asp?order=639_3&letter=y
 	'za' => '(Cuengh)',		# Zhuang
 	'zea' => 'Zeêuws',	# Zealandic
-	'zh' => '中文',	# (Zhōng Wén) - Chinese
-	'zh-cfr' => '閩南語', # Min-nan alias (site is at minnan)
-	'zh-classical' => '古文 / 文言文',	# Classical Chinese/Literary Chinese
-	'zh-cn' => "\xE2\x80\xAA中文(简体)\xE2\x80\xAC",	# Simplified
-	'zh-hk' => "\xE2\x80\xAA中文(繁體)\xE2\x80\xAC",	# Traditional (Hong Kong)
-	'zh-min-nan' => 'Bân-lâm-gú', # Min-nan -- (see bug 8217)
-	'zh-sg' => "\xE2\x80\xAA中文(简体)\xE2\x80\xAC", # Simplified (Singapore)
-	'zh-tw' => "\xE2\x80\xAA中文(繁體)\xE2\x80\xAC",	# Traditional
-	'zh-yue' => '粵語',	# Cantonese
+	'zh' => '中文',						# (Zhōng Wén) - Chinese
+	'zh-cfr' => '閩南語', 					# Min-nan alias (site is at minnan)
+	'zh-classical' => '古文 / 文言文',			# Classical Chinese/Literary Chinese
+	'zh-cn' => "\xE2\x80\xAA中文(中国)\xE2\x80\xAC",		# Chinese (PRC)
+	'zh-hans' => '\xE2\x80\xAA中文(简体)\xE2\x80\xAC',	# Chinese written using the Simplified Chinese script
+	'zh-hant' => '\xE2\x80\xAA中文(繁體)\xE2\x80\xAC',	# Chinese written using the Traditional Chinese script
+	'zh-hk' => "\xE2\x80\xAA中文(香港)\xE2\x80\xAC",		# Chinese (Hong Kong)
+	'zh-min-nan' => 'Bân-lâm-gú', 				# Min-nan -- (see bug 8217)
+	'zh-sg' => "\xE2\x80\xAA中文(新加坡)\xE2\x80\xAC", 	# Chinese (Singapore)
+	'zh-tw' => "\xE2\x80\xAA中文(台灣)\xE2\x80\xAC",		# Chinese (Taiwan)
+	'zh-yue' => '粵語',					# Cantonese -- (see bug 8217)
 	'zu' => 'isiZulu'		# Zulu
 );
 ?>
